added prompt template CRUD functionality
